--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section class="hero-image">
       <h1 class="heading"><div class="container">Неопознанный Енот</div></h1>
-      <p><div class="container"></div>Junior верстальщик</div></p>
+      <p><div class="container"></div>Junior верстальщица</div></p>
     </section>
 
     <section class="intro">
